--- a/src/app/nav-bar/nav-bar.component.less
+++ b/src/app/nav-bar/nav-bar.component.less
@@ -39,11 +39,26 @@ a {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     background: #fff;
     z-index: 10;
-    &--top {
-        position: fixed;
-        top: 0;
-    }
 }
+.et-hero-tabs-container--top {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+}
+
+// .et-hero-tabs-container--top {
+//   .et-hero-tabs-container;
+//       position: fixed;
+//       top: 0;
+// }
 
 .et-hero-tab {
     display: flex;
