--- a/src/app/nav-bar/nav-bar.component.less
+++ b/src/app/nav-bar/nav-bar.component.less
@@ -5,6 +5,9 @@ body {
 a {
   text-decoration: none;
 }
+li{
+  text-decoration: none;
+}
 
 .et-hero-tabs,
 .et-slide {
@@ -27,6 +30,9 @@ a {
         letter-spacing: 0.3rem;
         opacity: 0.6;
     }
+    .iconsContainer{
+      background-color: #66B1F1;
+    }
 }
 
 .et-hero-tabs-container {
@@ -39,6 +45,10 @@ a {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     background: #fff;
     z-index: 10;
+}
+.top{
+  position: fixed;
+  top: 0;
 }
 .et-hero-tabs-container--top {
   display: flex;
