--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -1,4 +1,11 @@
 <div id="iconsContainer">
-  <ng-icon style="margin-right: 10px" name="featherGithub"></ng-icon>
-  <ng-icon name="featherLinkedin"></ng-icon>
+  <a class="link" href="https://github.com/szmajduch1">
+    <ng-icon style="margin-right: 10px" name="featherGithub"></ng-icon>
+  </a>
+  <a
+    class="link"
+    href="https://www.linkedin.com/in/patryk-szmajduch-43417a1a3/"
+  >
+    <ng-icon name="featherLinkedin"></ng-icon>
+  </a>
 </div>
